packages/wgpu/native/include/wgpu_native.h

typedef struct WGPUInstanceDescriptor {
  uint8_t validation;
  uint8_t gpu_based_validation;
  /**
   * Backend bitmask: Vulkan=1, GL=2, Metal=4, DX12=8, BrowserWebGpu=16.
   * 0 = all backends (default).
   */
  uint32_t backends;
} WGPUInstanceDescriptor;
typedef struct WGPURequestAdapterOptions {
  uint32_t power_preference;
  uint8_t force_fallback_adapter;
} WGPURequestAdapterOptions;
typedef struct WGPUAdapterInfo {
  const char *vendor;
  const char *architecture;
  const char *device;
  const char *description;
  uint32_t backend_type;
  uint32_t adapter_type;
  uint32_t vendor_id;
  uint32_t device_id;
  /**
   * Vulkan API version (VK_MAKE_API_VERSION packed u32), 0 on non-Vulkan.
   */
  uint32_t driver_api_version;
} WGPUAdapterInfo;
typedef struct WGPUDeviceLimits {
  uint32_t max_texture_dimension_1d;
  uint32_t max_texture_dimension_2d;
  uint32_t max_texture_dimension_3d;
  uint32_t max_texture_array_layers;
  uint32_t max_bind_groups;
  uint32_t max_bind_groups_plus_vertex_buffers;
  uint32_t max_bindings_per_bind_group;
  uint32_t max_dynamic_uniform_buffers_per_pipeline_layout;
  uint32_t max_dynamic_storage_buffers_per_pipeline_layout;
  uint32_t max_sampled_textures_per_shader_stage;
  uint32_t max_samplers_per_shader_stage;
  uint32_t max_storage_buffers_per_shader_stage;
  uint32_t max_storage_textures_per_shader_stage;
  uint32_t max_uniform_buffers_per_shader_stage;
  uint64_t max_uniform_buffer_binding_size;
  uint64_t max_storage_buffer_binding_size;
  uint32_t min_uniform_buffer_offset_alignment;
  uint32_t min_storage_buffer_offset_alignment;
  uint32_t max_vertex_buffers;
  uint64_t max_buffer_size;
  uint32_t max_vertex_attributes;
  uint32_t max_vertex_buffer_array_stride;
  uint32_t max_inter_stage_shader_variables;
  uint32_t max_color_attachments;
  uint32_t max_color_attachment_bytes_per_sample;
  uint32_t max_compute_workgroup_storage_size;
  uint32_t max_compute_invocations_per_workgroup;
  uint32_t max_compute_workgroup_size_x;
  uint32_t max_compute_workgroup_size_y;
  uint32_t max_compute_workgroup_size_z;
  uint32_t max_compute_workgroups_per_dimension;
  /**
   * Maximum size of immediate (push constant) data in bytes (0 = none).
   */
  uint32_t max_immediate_size;
} WGPUDeviceLimits;
typedef uint64_t WGPUDevice;
typedef struct WGPUDeviceDescriptor {
  /**
   * Bitmask of required features (bit positions match GpuFeatureName enum order).
   */
  uint32_t required_features;
  /**
   * Pointer to required limits, or null for defaults.
   */
  const struct WGPUDeviceLimits *required_limits;
  /**
   * If non-zero, request bindless texture extensions (wgpu-specific).
   */
  uint8_t bindless_textures;
  /**
   * If non-zero, request IMMEDIATES feature (push constants).
   */
  uint8_t immediates;
  const char *label;
} WGPUDeviceDescriptor;
typedef uint64_t WGPUQueue;
typedef uint64_t WGPUBuffer;
typedef struct WGPUBufferDescriptor {
  uint64_t size;
  uint32_t usage;
  uint8_t mapped_at_creation;
  const char *label;
} WGPUBufferDescriptor;
typedef uint64_t WGPUTexture;
typedef struct WGPUTextureDescriptor {
  uint32_t width;
  uint32_t height;
  uint32_t depth_or_array_layers;
  uint32_t mip_level_count;
  uint32_t sample_count;
  uint32_t dimension;
  uint32_t format;
  uint32_t usage;
  uint32_t view_format_count;
  const uint32_t *view_formats;
  const char *label;
} WGPUTextureDescriptor;
typedef uint64_t WGPUTextureView;
typedef struct WGPUTextureViewDescriptor {
  uint32_t format;
  uint32_t dimension;
  uint32_t base_mip_level;
  uint32_t mip_level_count;
  uint32_t base_array_layer;
  uint32_t array_layer_count;
  uint32_t aspect;
  /**
   * TextureUsages flags (0 = inherit from texture).
   */
  uint32_t usage;
  const char *label;
} WGPUTextureViewDescriptor;
typedef struct WGPUSamplerDescriptor {
  uint32_t address_mode_u;
  uint32_t address_mode_v;
  uint32_t address_mode_w;
  uint32_t mag_filter;
  uint32_t min_filter;
  uint32_t mipmap_filter;
  float lod_min_clamp;
  float lod_max_clamp;
  uint32_t compare;
  uint16_t max_anisotropy;
  const char *label;
} WGPUSamplerDescriptor;
typedef struct WGPUBindGroupLayoutEntry {
  uint32_t binding;
  uint32_t visibility;
  uint32_t binding_type;
  uint32_t buffer_type;
  uint8_t has_dynamic_offset;
  uint64_t min_binding_size;
  uint32_t sampler_type;
  uint32_t texture_sample_type;
  uint32_t texture_view_dimension;
  uint8_t texture_multisampled;
  /**
   * Number of elements for binding arrays (0 = not an array).
   */
  uint32_t count;
} WGPUBindGroupLayoutEntry;
typedef uint64_t WGPUCommandEncoder;
typedef uint64_t WGPUCommandBuffer;
typedef uint64_t WGPUQuerySet;
typedef uint64_t WGPUBufferMapping;
typedef uint64_t WGPUFence;
/**
 * Get the last error message.
 */
 const char *wgpu_get_last_error(void) ;
uint8_t wgpun_CommandEncoderResolveQuerySet(WGPUCommandEncoder encoder,
                                            WGPUQuerySet query_set,
                                            uint32_t first_query,
                                            uint32_t query_count,
                                            WGPUBuffer destination,
                                            uint64_t destination_offset)
;
 float wgpun_QueueGetTimestampPeriod(WGPUQueue queue) ;
WGPUBufferMapping wgpun_BufferMapStart(WGPUDevice device,
                                       WGPUBuffer buffer,
                                       uint64_t offset,
                                       uint64_t size,
                                       uint32_t mode)
;
 int32_t wgpun_BufferMapStatus(WGPUBufferMapping handle) ;
 const uint8_t *wgpun_BufferMapGetPointer(WGPUBufferMapping handle) ;
 uint8_t *wgpun_BufferMapGetPointerMut(WGPUBufferMapping handle) ;
 uint64_t wgpun_BufferMapGetSize(WGPUBufferMapping handle) ;
 void wgpun_BufferUnmap(WGPUBufferMapping handle, WGPUBuffer _original_buffer_id) ;
WGPUFence wgpun_QueueSubmitFenced(WGPUQueue queue,
                                  const WGPUCommandBuffer *command_buffers,
                                  uint32_t count)
;
 int32_t wgpun_FenceStatus(WGPUDevice device, WGPUFence handle) ;
 uint32_t wgpun_FenceWait(WGPUDevice device, WGPUFence handle) ;
 void wgpun_FenceRelease(WGPUFence handle) ;
/**
 * Create a render surface with platform texture sharing.
 * Returns surface handle, or 0 on failure (check wgpu_get_last_error).
 */
 uint64_t wgpu_create_surface(WGPUDevice device_handle, uint32_t width, uint32_t height) ;
/**
 * Create a render surface from a native window (Android only).
 */

uint64_t wgpu_create_surface_from_window(WGPUDevice device_handle,
                                         void *window_ptr,
                                         uint32_t width,
                                         uint32_t height)
;
/**
 * Stub for Android - use wgpu_create_surface_from_window instead
 */
 uint64_t wgpu_create_surface(WGPUDevice _device_handle, uint32_t _width, uint32_t _height) ;
/**
 * Stub for non-Android - use wgpu_create_surface instead
 */

uint64_t wgpu_create_surface_from_window(WGPUDevice _device_handle,
                                         void *_window_ptr,
                                         uint32_t _width,
                                         uint32_t _height)
;
/**
 * Get the platform-specific texture handle for sharing.
 */
 uint64_t wgpu_get_surface_handle(uint64_t surface_id) ;
/**
 * Get the pixel buffer pointer for a surface (Windows only).
 */
 const uint8_t *wgpu_get_pixel_buffer_ptr(uint64_t surface_id) ;
/**
 * Get the D3D11 shared handle for a surface (Windows only).
 */
 uint64_t wgpu_get_shared_handle(uint64_t surface_id) ;
/**
 * Get the texture format of a surface (returns FFI texture format value).
 */
 uint32_t wgpu_get_surface_format(uint64_t surface_id) ;
/**
 * Resize surface. Returns 1 on success, 0 on failure.
 */
 int32_t wgpu_resize_surface(uint64_t surface_id, uint32_t width, uint32_t height) ;
/**
 * Destroy surface.
 */
 void wgpu_destroy_surface(uint64_t surface_id) ;
 void wgpu_mark_frame_available(int64_t engine_handle, int64_t texture_id) ;
 void wgpu_mark_frame_available(int64_t _engine_handle, int64_t _texture_id) ;
/**
 * Get texture view for rendering to surface.
 */
 WGPUTextureView wgpu_surface_get_texture_view(uint64_t surface_id) ;
/**
 * Copy from a GpuTexture to surface.
 */
 void wgpu_surface_copy_from_texture(uint64_t surface_id, WGPUTexture src_texture) ;
/**
 * Signal frame is ready for display.
 */
 void wgpu_surface_present(uint64_t surface_id) ;
/**
 * Create a swapchain surface from a native window handle.
 * - Windows: pass HWND
 * - macOS: pass NSWindow pointer (contentView is extracted internally)
 * Returns surface handle, or 0 on failure (check wgpu_get_last_error).
 */

uint64_t wgpu_create_swapchain_surface(WGPUDevice device_handle,
                                       intptr_t native_handle,
                                       uint32_t width,
                                       uint32_t height)
;
/**
 * Stub for unsupported platforms.
 */

uint64_t wgpu_create_swapchain_surface(WGPUDevice _device_handle,
                                       intptr_t _native_handle,
                                       uint32_t _width,
                                       uint32_t _height)
;
/**
 * Get the texture format of a swapchain surface.
 * Returns format enum value matching GpuTextureFormat index.
 */
 uint32_t wgpu_swapchain_get_format(uint64_t surface_id) ;
/**
 * Acquire the next swapchain texture for rendering.
 * Returns texture view handle, or 0 if failed.
 */
 WGPUTextureView wgpu_swapchain_get_texture_view(uint64_t surface_id) ;
/**
 * Get the depth texture view for a swapchain surface.
 */
 WGPUTextureView wgpu_swapchain_get_depth_view(uint64_t surface_id) ;
/**
 * Present the current swapchain frame.
 */
 void wgpu_swapchain_present(uint64_t surface_id) ;
/**
 * Resize a swapchain surface.
 * Returns 1 on success, 0 on failure.
 */
 uint32_t wgpu_swapchain_resize(uint64_t surface_id, uint32_t width, uint32_t height) ;
/**
 * Clear the swapchain to a solid color and present.
 */
 void wgpu_swapchain_clear(uint64_t surface_id, double r, double g, double b, double a) ;
/**
 * Destroy a swapchain surface.
 */
 void wgpu_swapchain_destroy(uint64_t surface_id) ;