packages/wgpu/lib/src/ffi/bindings_generated.dart


@ffi.Native<
  ffi.Uint8 Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint64,
    ffi.Uint64,
  )
>()
external int wgpun_CommandEncoderResolveQuerySet(
  int encoder,
  int query_set,
  int first_query,
  int query_count,
  int destination,
  int destination_offset,
);

@ffi.Native<ffi.Float Function(ffi.Uint64)>()
external double wgpun_QueueGetTimestampPeriod(
  int queue,
);

@ffi.Native<
  ffi.Uint64 Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Uint64,
    ffi.Uint64,
    ffi.Uint32,
  )
>()
external int wgpun_BufferMapStart(
  int device,
  int buffer,
  int offset,
  int size,
  int mode,
);

@ffi.Native<ffi.Int32 Function(ffi.Uint64)>()
external int wgpun_BufferMapStatus(
  int handle,
);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Uint64)>()
external ffi.Pointer<ffi.Uint8> wgpun_BufferMapGetPointer(
  int handle,
);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Uint64)>()
external ffi.Pointer<ffi.Uint8> wgpun_BufferMapGetPointerMut(
  int handle,
);

@ffi.Native<ffi.Uint64 Function(ffi.Uint64)>()
external int wgpun_BufferMapGetSize(
  int handle,
);

@ffi.Native<ffi.Void Function(ffi.Uint64, ffi.Uint64)>()
external void wgpun_BufferUnmap(
  int handle,
  int _original_buffer_id,
);

@ffi.Native<
  ffi.Uint64 Function(ffi.Uint64, ffi.Pointer<ffi.Uint64>, ffi.Uint32)
>()
external int wgpun_QueueSubmitFenced(
  int queue,
  ffi.Pointer<ffi.Uint64> command_buffers,
  int count,
);

@ffi.Native<ffi.Int32 Function(ffi.Uint64, ffi.Uint64)>()
external int wgpun_FenceStatus(
  int device,
  int handle,
);

@ffi.Native<ffi.Uint32 Function(ffi.Uint64, ffi.Uint64)>()
external int wgpun_FenceWait(
  int device,
  int handle,
);

@ffi.Native<ffi.Void Function(ffi.Uint64)>()
external void wgpun_FenceRelease(
  int handle,
);

/// Create a render surface with platform texture sharing.
/// Returns surface handle, or 0 on failure (check wgpu_get_last_error).
@ffi.Native<ffi.Uint64 Function(ffi.Uint64, ffi.Uint32, ffi.Uint32)>()
external int wgpu_create_surface(
  int device_handle,
  int width,
  int height,
);

/// Stub for non-Android - use wgpu_create_surface instead
@ffi.Native<
  ffi.Uint64 Function(ffi.Uint64, ffi.Pointer<ffi.Void>, ffi.Uint32, ffi.Uint32)
>()
external int wgpu_create_surface_from_window(
  int _device_handle,
  ffi.Pointer<ffi.Void> _window_ptr,
  int _width,
  int _height,
);

/// Get the platform-specific texture handle for sharing.
@ffi.Native<ffi.Uint64 Function(ffi.Uint64)>()
external int wgpu_get_surface_handle(
  int surface_id,
);

/// Get the pixel buffer pointer for a surface (Windows only).
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Uint64)>()
external ffi.Pointer<ffi.Uint8> wgpu_get_pixel_buffer_ptr(
  int surface_id,
);

/// Get the D3D11 shared handle for a surface (Windows only).
@ffi.Native<ffi.Uint64 Function(ffi.Uint64)>()
external int wgpu_get_shared_handle(
  int surface_id,
);

/// Get the texture format of a surface (returns FFI texture format value).
@ffi.Native<ffi.Uint32 Function(ffi.Uint64)>()
external int wgpu_get_surface_format(
  int surface_id,
);

/// Resize surface. Returns 1 on success, 0 on failure.
@ffi.Native<ffi.Int32 Function(ffi.Uint64, ffi.Uint32, ffi.Uint32)>()
external int wgpu_resize_surface(
  int surface_id,
  int width,
  int height,
);

/// Destroy surface.
@ffi.Native<ffi.Void Function(ffi.Uint64)>()
external void wgpu_destroy_surface(
  int surface_id,
);

@ffi.Native<ffi.Void Function(ffi.Int64, ffi.Int64)>()
external void wgpu_mark_frame_available(
  int _engine_handle,
  int _texture_id,
);

/// Get texture view for rendering to surface.
@ffi.Native<ffi.Uint64 Function(ffi.Uint64)>()
external int wgpu_surface_get_texture_view(
  int surface_id,
);

/// Copy from a GpuTexture to surface.
@ffi.Native<ffi.Void Function(ffi.Uint64, ffi.Uint64)>()
external void wgpu_surface_copy_from_texture(
  int surface_id,
  int src_texture,
);

/// Signal frame is ready for display.
@ffi.Native<ffi.Void Function(ffi.Uint64)>()
external void wgpu_surface_present(
  int surface_id,
);

/// Stub for unsupported platforms.
@ffi.Native<
  ffi.Uint64 Function(ffi.Uint64, ffi.IntPtr, ffi.Uint32, ffi.Uint32)
>()
external int wgpu_create_swapchain_surface(
  int _device_handle,
  int _native_handle,
  int _width,
  int _height,
);

/// Get the texture format of a swapchain surface.
/// Returns format enum value matching GpuTextureFormat index.
@ffi.Native<ffi.Uint32 Function(ffi.Uint64)>()
external int wgpu_swapchain_get_format(
  int surface_id,
);

/// Acquire the next swapchain texture for rendering.
/// Returns texture view handle, or 0 if failed.
@ffi.Native<ffi.Uint64 Function(ffi.Uint64)>()
external int wgpu_swapchain_get_texture_view(
  int surface_id,
);

/// Get the depth texture view for a swapchain surface.
@ffi.Native<ffi.Uint64 Function(ffi.Uint64)>()
external int wgpu_swapchain_get_depth_view(
  int surface_id,
);

/// Present the current swapchain frame.
@ffi.Native<ffi.Void Function(ffi.Uint64)>()
external void wgpu_swapchain_present(
  int surface_id,
);

/// Resize a swapchain surface.
/// Returns 1 on success, 0 on failure.
@ffi.Native<ffi.Uint32 Function(ffi.Uint64, ffi.Uint32, ffi.Uint32)>()
external int wgpu_swapchain_resize(
  int surface_id,
  int width,
  int height,
);

/// Clear the swapchain to a solid color and present.
@ffi.Native<
  ffi.Void Function(ffi.Uint64, ffi.Double, ffi.Double, ffi.Double, ffi.Double)
>()
external void wgpu_swapchain_clear(
  int surface_id,
  double r,
  double g,
  double b,
  double a,
);

/// Destroy a swapchain surface.
@ffi.Native<ffi.Void Function(ffi.Uint64)>()
external void wgpu_swapchain_destroy(
  int surface_id,
);

final class WGPUInstanceDescriptor extends ffi.Struct {
  @ffi.Uint8()
  external int validation;

  @ffi.Uint8()
  external int gpu_based_validation;

  /// Backend bitmask: Vulkan=1, GL=2, Metal=4, DX12=8, BrowserWebGpu=16.
  /// 0 = all backends (default).
  @ffi.Uint32()
  external int backends;
}

final class WGPURequestAdapterOptions extends ffi.Struct {
  @ffi.Uint32()
  external int power_preference;

  @ffi.Uint8()
  external int force_fallback_adapter;
}

final class WGPUAdapterInfo extends ffi.Struct {
  external ffi.Pointer<ffi.Char> vendor;

  external ffi.Pointer<ffi.Char> architecture;

  external ffi.Pointer<ffi.Char> device;

  external ffi.Pointer<ffi.Char> description;

  @ffi.Uint32()
  external int backend_type;

  @ffi.Uint32()
  external int adapter_type;

  @ffi.Uint32()
  external int vendor_id;

  @ffi.Uint32()
  external int device_id;

  /// Vulkan API version (VK_MAKE_API_VERSION packed u32), 0 on non-Vulkan.
  @ffi.Uint32()
  external int driver_api_version;
}

final class WGPUDeviceLimits extends ffi.Struct {
  @ffi.Uint32()
  external int max_texture_dimension_1d;

  @ffi.Uint32()
  external int max_texture_dimension_2d;

  @ffi.Uint32()
  external int max_texture_dimension_3d;

  @ffi.Uint32()
  external int max_texture_array_layers;

  @ffi.Uint32()
  external int max_bind_groups;

  @ffi.Uint32()
  external int max_bind_groups_plus_vertex_buffers;

  @ffi.Uint32()
  external int max_bindings_per_bind_group;

  @ffi.Uint32()
  external int max_dynamic_uniform_buffers_per_pipeline_layout;

  @ffi.Uint32()
  external int max_dynamic_storage_buffers_per_pipeline_layout;

  @ffi.Uint32()
  external int max_sampled_textures_per_shader_stage;

  @ffi.Uint32()
  external int max_samplers_per_shader_stage;

  @ffi.Uint32()
  external int max_storage_buffers_per_shader_stage;

  @ffi.Uint32()
  external int max_storage_textures_per_shader_stage;

  @ffi.Uint32()
  external int max_uniform_buffers_per_shader_stage;

  @ffi.Uint64()
  external int max_uniform_buffer_binding_size;

  @ffi.Uint64()
  external int max_storage_buffer_binding_size;

  @ffi.Uint32()
  external int min_uniform_buffer_offset_alignment;

  @ffi.Uint32()
  external int min_storage_buffer_offset_alignment;

  @ffi.Uint32()
  external int max_vertex_buffers;

  @ffi.Uint64()
  external int max_buffer_size;

  @ffi.Uint32()
  external int max_vertex_attributes;

  @ffi.Uint32()
  external int max_vertex_buffer_array_stride;

  @ffi.Uint32()
  external int max_inter_stage_shader_variables;

  @ffi.Uint32()
  external int max_color_attachments;

  @ffi.Uint32()
  external int max_color_attachment_bytes_per_sample;

  @ffi.Uint32()
  external int max_compute_workgroup_storage_size;

  @ffi.Uint32()
  external int max_compute_invocations_per_workgroup;

  @ffi.Uint32()
  external int max_compute_workgroup_size_x;

  @ffi.Uint32()
  external int max_compute_workgroup_size_y;

  @ffi.Uint32()
  external int max_compute_workgroup_size_z;

  @ffi.Uint32()
  external int max_compute_workgroups_per_dimension;

  /// Maximum size of immediate (push constant) data in bytes (0 = none).
  @ffi.Uint32()
  external int max_immediate_size;
}

final class WGPUDeviceDescriptor extends ffi.Struct {
  /// Bitmask of required features (bit positions match GpuFeatureName enum order).
  @ffi.Uint32()
  external int required_features;

  /// Pointer to required limits, or null for defaults.
  external ffi.Pointer<WGPUDeviceLimits> required_limits;

  /// If non-zero, request bindless texture extensions (wgpu-specific).
  @ffi.Uint8()
  external int bindless_textures;

  /// If non-zero, request IMMEDIATES feature (push constants).
  @ffi.Uint8()
  external int immediates;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPUBufferDescriptor extends ffi.Struct {
  @ffi.Uint64()
  external int size;

  @ffi.Uint32()
  external int usage;

  @ffi.Uint8()
  external int mapped_at_creation;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPUTextureDescriptor extends ffi.Struct {
  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint32()
  external int depth_or_array_layers;

  @ffi.Uint32()
  external int mip_level_count;

  @ffi.Uint32()
  external int sample_count;

  @ffi.Uint32()
  external int dimension;

  @ffi.Uint32()
  external int format;

  @ffi.Uint32()
  external int usage;

  @ffi.Uint32()
  external int view_format_count;

  external ffi.Pointer<ffi.Uint32> view_formats;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPUTextureViewDescriptor extends ffi.Struct {
  @ffi.Uint32()
  external int format;

  @ffi.Uint32()
  external int dimension;

  @ffi.Uint32()
  external int base_mip_level;

  @ffi.Uint32()
  external int mip_level_count;

  @ffi.Uint32()
  external int base_array_layer;

  @ffi.Uint32()
  external int array_layer_count;

  @ffi.Uint32()
  external int aspect;

  /// TextureUsages flags (0 = inherit from texture).
  @ffi.Uint32()
  external int usage;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPUSamplerDescriptor extends ffi.Struct {
  @ffi.Uint32()
  external int address_mode_u;

  @ffi.Uint32()
  external int address_mode_v;

  @ffi.Uint32()
  external int address_mode_w;

  @ffi.Uint32()
  external int mag_filter;

  @ffi.Uint32()
  external int min_filter;

  @ffi.Uint32()
  external int mipmap_filter;

  @ffi.Float()
  external double lod_min_clamp;

  @ffi.Float()
  external double lod_max_clamp;

  @ffi.Uint32()
  external int compare;

  @ffi.Uint16()
  external int max_anisotropy;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPUBindGroupLayoutEntry extends ffi.Struct {
  @ffi.Uint32()
  external int binding;

  @ffi.Uint32()
  external int visibility;

  @ffi.Uint32()
  external int binding_type;

  @ffi.Uint32()
  external int buffer_type;

  @ffi.Uint8()
  external int has_dynamic_offset;

  @ffi.Uint64()
  external int min_binding_size;

  @ffi.Uint32()
  external int sampler_type;

  @ffi.Uint32()
  external int texture_sample_type;

  @ffi.Uint32()
  external int texture_view_dimension;

  @ffi.Uint8()
  external int texture_multisampled;

  /// Number of elements for binding arrays (0 = not an array).
  @ffi.Uint32()
  external int count;
}
